se agrego client

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #Datasoruce
-spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:34407/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/mare
 spring.datasource.username=root
-spring.datasource.password=eFFa4HA1eEAadFE55F4HeBcH44aE5AfC
+spring.datasource.password=root
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
 #Sql
