--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,17 +1,18 @@
-# Usa una imagen de Java como base
-FROM openjdk:17-jdk-slim
+# Usa una imagen base de OpenJDK como base
+FROM openjdk:17
 
-# Establece el directorio de trabajo dentro del contenedor
+# Establece el directorio de trabajo
 WORKDIR /app
 
-# Copia los archivos de tu aplicación al contenedor
-COPY target/classes /app/classes
+# Copia el archivo JAR empaquetado en la imagen
+COPY target/api-0.0.1-SNAPSHOT.jar /app/api-0.0.1-SNAPSHOT.jar
 
-# Establece la variable de entorno para la codificación de archivos
-ENV LANG C.UTF-8
+# Expone el puerto en el que tu aplicación escucha (si es necesario)
+EXPOSE 8080
 
-# Ejecuta la aplicación Spring Boot
-CMD ["java", "-classpath", "/app/classes", "com.mare.api.ApiApplication"]
+# Comando para ejecutar la aplicación cuando el contenedor se inicia
+CMD ["java", "-jar", "api-0.0.1-SNAPSHOT.jar"]
+
 
 
 
